--- a/notebooks/dbg-custom-rnn.ipynb
+++ b/notebooks/dbg-custom-rnn.ipynb
@@ -80,7 +80,7 @@
     "- target_column : You can choose any metrics available within training data, by default, the algorithm works to use `EndPrice` as target variable\n",
     "- covariate_columns : Optionally you can specify some additional series that have correlation with the main time series, such as opening price, and maximum and minimum price during past intervals. \n",
     "\n",
-    "**In a real worls stock prediction example, you'd ideally want to use covariates based on some broader metrices, such as news analysis, options market related to underlying securities and so on.** Keep in mind though analyzing what supporting metrices to use to increase model accuracy is out of scope of this workshop. As such, the model you'll train here would have limited value in actually predicting the stock values in real world."
+    "**In a real world stock prediction example, you'd ideally want to use covariates based on some broader metrices, such as news analysis, options market related to underlying securities and so on.** Keep in mind though analyzing what supporting metrices to use to increase model accuracy is out of scope of this workshop. As such, the model you'll train here would have limited value in actually predicting the stock values in real world."
    ]
   },
   {
@@ -211,7 +211,7 @@
     "- Uniquely identifiable job name\n",
     "- Amazon ECR registry path where the training code is stored\n",
     "- URL of the Amazon S3 bucket where you have the training data stored\n",
-    "- URL of the S3 bucket where you want to store the output of the job (upon training completion SageMaker archives whatever files your code stores under the path `/opt/ml/modl` within the container, and makes those available as a tar-file named `model.tar.gz` at the specified location on S3"
+    "- URL of the S3 bucket where you want to store the output of the job (upon training completion SageMaker archives whatever files your code stores under the path `/opt/ml/model` within the container, and makes those available as a tar-file named `model.tar.gz` at the specified location on S3)"
    ]
   },
   {
@@ -432,24 +432,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "684e2bd500854ac9b945768eee7ca348",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(SelectionSlider(description='forecast_date', options=(('2018-09-04', Timestamp('2018-09-…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dateoptions = util.get_date_range(testdata, target_stock, dateformat, lag, horizon, interval)\n",
     "style = {'description_width': 'initial'}\n",
@@ -476,7 +461,7 @@
     "\n",
     "1. Our choice of using opening and maximum and minimum price may not be a good choice in actually forecasting stock price movement, simply because the correlation observed in thse metrices may just be an effect of some external factor, and metrices among themselves might not have any causality.\n",
     "\n",
-    "1. We used clustering in an attempt to find stocks whose movement might affect each other. Following the same as argument however, there might be no causality, instead the stocks move together due to some external factor influencing all such stocks in a similar fashion, because they are somehow related, either due to to being in same industry, or otherwise.\n",
+    "1. We used clustering in an attempt to find stocks whose movement might affect each other. Following the same  argument however, there might be no causality, instead the stocks move together due to some external factor influencing all such stocks in a similar fashion, because they are somehow related, either due to to being in same industry, or otherwise.\n",
     "\n",
     "\n",
     "Feel free to repeat these experiments using other data sources, in conjuntion with the DBG data set, such as options market data, news headlines and such. \n",
