--- a/notebooks/dbg-deepar.ipynb
+++ b/notebooks/dbg-deepar.ipynb
@@ -469,24 +469,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19f60a9088ea4330b3b89ef1b7986e89",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='stock_id', max=4, style=SliderStyle(description_width='i…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "style = {'description_width': 'initial'}\n",
     "@interact_manual(\n",
@@ -516,6 +501,25 @@
     "        show_samples=show_samples,        \n",
     "        confidence=confidence\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some Final Thoughts\n",
+    "\n",
+    "1. We made improvements from our custom RNN code, by using stocks identified to belong to a cluster - `BMW`, `Chrysler`, `Volkswagon`, `Contiental` and `Porsche`, together as time series' in DeepAR model. Having a ARIMAx model trained across the cross sections of these individiual series' helped us improve upon the prediction, and allowe dus to generate forecast for any stocks within the collection.\n",
+    "\n",
+    "1. We used closing price as target series to predict, and to demonstrate the dynamic feature, used opening, minimum and maximum price as covariates. However this is not possible in reality. The values of series' used as dynamic features need to be know across the forecast horizon. Therfore the accuracy that we experience above is somewhat artificial, in that we are forecasting closing prices, knowing the opening, minimum and maximum prices, which is impossible.\n",
+    "\n",
+    "1. To use dynamic features, in reality, you need to find data sources that can be known before, These could be:\n",
+    "    - Companies' forward looking sales/revenue targets\n",
+    "    - Analysts guidances on stock prices\n",
+    "    - Economic forecasts from other sources\n",
+    "    - Price trends of future options, base don the underlying stock\n",
+    "\n",
+    "Be creative, find data sources that can effectively be used, and feel free to share your findings by emailing the author of the workshop at [binoyd@amazon.com](mailto:binoyd@amazon.com)"
    ]
   },
   {
