Add plot legends

--- a/notebooks/dbg-custom-rnn.ipynb
+++ b/notebooks/dbg-custom-rnn.ipynb
@@ -1,26 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import boto3\n",
-    "import pandas as pd\n",
-    "import sagemaker\n",
-    "from sagemaker.estimator import Estimator\n",
-    "from sagemaker.predictor import RealTimePredictor\n",
-    "from sagemaker.predictor import csv_serializer\n",
-    "\n",
-    "from ipywidgets import interact_manual, SelectionSlider\n",
-    "from IPython.display import display\n",
-    "\n",
-    "import custom_rnn_util as util"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,6 +41,26 @@
     "The container model used here, is derived from the [blog post](https://aws.amazon.com/blogs/machine-learning/train-and-host-scikit-learn-models-in-amazon-sagemaker-by-building-a-scikit-docker-container/) describing how to train and host Sciki-Learn models on SageMaker. With the only difference being yuou'll be using Keras with TensorFlow, instead of Scikit-Learn, the container architecture remains the same.\n",
     "\n",
     "This also serves to demonstrate that SageMaker capabilities can be extend to virtually any algorithm you use, using any popular Machine Leanrning libraries, with ease."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import boto3\n",
+    "import pandas as pd\n",
+    "import sagemaker\n",
+    "from sagemaker.estimator import Estimator\n",
+    "from sagemaker.predictor import RealTimePredictor\n",
+    "from sagemaker.predictor import csv_serializer\n",
+    "\n",
+    "from ipywidgets import interact_manual, SelectionSlider\n",
+    "from IPython.display import display\n",
+    "\n",
+    "import custom_rnn_util as util"
    ]
   },
   {
@@ -179,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Define model artifact name and image\n",
@@ -305,8 +307,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#estimator_job = 'dbg-custom-rnn-D-BMW-2018-11-06-00-33-20-882'\n",
-    "#estimator_job = 'dbg-custom-rnn-H-BMW-2018-11-04-09-55-28-663'\n",
+    "#Use a job name from previous training, \n",
+    "#if you need to connect to a pre-deployed endpoint.\n",
+    "\n",
+    "#When running in one session, predictor is already initialized when 'deploy' method returns. \n",
+    "\n",
+    "estimator_job = 'dbg-custom-rnn-D-BMW-2018-11-19-23-11-02-036' \n",
+    "\n",
     "predictor = RealTimePredictor(estimator_job, content_type = \"text/csv\")\n",
     "model_archive = \"{}/{}/output/{}/output/model.tar.gz\".format(artifactname,interval,estimator_job)"
    ]
@@ -390,11 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you chose to use data sampled at daily intervals, you should see that the forecasts closely followed the observed values in slightly more than 50% of cases. This indicates that our rudimentary model does a better job than at least a random guess, in predicting stock price movements.\n",
-    "\n",
-    "Lastly, feel free to play around with the interactive widget, to generate forecast on any chosen date, simply by choosing the forecast date using a slider. You might see that for some dates/times there is no data, and that's becasue there are non-trading days/hours within the training/test set.\n",
-    "\n",
-    "When you move on to the the next module, you'll see how you can use an AWS provided algorithm, that is equipped to deal with such gaps in data."
+    "If you chose to use data sampled at daily intervals, you should see that the forecasts closely followed the observed values in slightly more than 50% of cases. This indicates that our rudimentary model does a better job than at least a random guess, in predicting stock price movements."
    ]
   },
   {
