--- a/notebooks/dbg-data-preperation.ipynb
+++ b/notebooks/dbg-data-preperation.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stock Price Prediction Using Deutsche Börse Dataset on SageMaker DeepAR \n",
+    "\n",
+    "\n",
+    "## Overview\n",
+    "In this project we use Deutsche Börse Public Dataset consisting of trade data aggregated to one minute intervals from the Xetra trading systems\n",
+    "\n",
+    "We obtain the data from public S3 bucket, hosted by Deutsche Börse under AWS Open Data Registry, aggregate the data within a given period, and prepare training, test and validation sets.\n",
+    "We then upload the prepared dat set to our own S3 bucket. This data location is then used with SageMaker provided DeepAR algorithm, to predict future movement of stock prices.\n",
+    "\n",
+    "Following diagrams provides an high level overview of the project architecture:\n",
+    "![ML Architecture](../images/architecture.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,32 +41,8 @@
     "\n",
     "s3_data_key = 'dbg-stockdata/source'\n",
     "s3_bucket = session.default_bucket()\n",
-    "processed_filename = 'dbg_processed'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Stock Price Prediction Using Deutsche Börse Dataset on SageMaker DeepAR \n",
+    "processed_filename = 'dbg_processed'\n",
     "\n",
-    "\n",
-    "## Overview\n",
-    "In this project we use Deutsche Börse Public Dataset consisting of trade data aggregated to one minute intervals from the Xetra trading systems\n",
-    "\n",
-    "We obtain the data from public S3 bucket, hosted by Deutsche Börse under AWS Open Data Registry, aggregate the data within a given period, and prepare training, test and validation sets.\n",
-    "We then upload the prepared dat set to our own S3 bucket. This data location is then used with SageMaker provided DeepAR algorithm, to predict future movement of stock prices.\n",
-    "\n",
-    "Following diagrams provides an high level overview of the project architecture:\n",
-    "![ML Architecture](../images/architecture.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "source_bucket = \"s3://deutsche-boerse-xetra-pds\""
    ]
   },
@@ -500,6 +493,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import io\n",
+    "import boto3\n",
+    "import sagemaker\n",
+    "import datetime\n",
+    "import pandas as pd\n",
+    "from pandas.tools.plotting import autocorrelation_plot\n",
+    "from pandas.tools.plotting import scatter_matrix\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Define IAM role and session\n",
+    "role = sagemaker.get_execution_role()\n",
+    "session = sagemaker.Session()\n",
+    "\n",
+    "s3_data_key = 'dbg-stockdata/source'\n",
+    "s3_bucket = session.default_bucket()\n",
+    "processed_filename = 'dbg_processed'\n",
+    "\n",
+    "\n",
     "workshop_bucket = \"fsv-309\"\n",
     "intervals = ['M', 'W', 'D', 'H']\n",
     "datafilename = \"resampled_stockdata.csv \"\n",
@@ -563,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
