--- a/notebooks/dbg-deepar.ipynb
+++ b/notebooks/dbg-deepar.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stock Price Prediction, using SageMaker DeepAR\n",
+    "\n",
+    "\n",
+    "DeepAR is a supervised learning algorithm for forecasting scalar time series. This notebook demonstrates:\n",
+    "- How to format Deutsche Börse maintained stock market data to be used as training input and prediction on DeepAR\n",
+    "- Usage of `Dynamic Features` on DeepAR, with metrices within the Deutsche Börse dataset used as dynamic features\n",
+    "- How to easily train an DeepAR Estimator and create a Predictor using DeepAR container image\n",
+    "\n",
+    "Running the model training using the highest memory CPU based [ML instance type](https://aws.amazon.com/sagemaker/pricing/instance-types/) available on AWS at this time (`ml.c5.18xlarge`), it should take about 15 minutes to train the model if you use data sampled at daily interval.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18,21 +33,6 @@
     "import matplotlib\n",
     "import deepar_util as util\n",
     "from deepar_util import DeepARPredictor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Stock Price Prediction, using SageMaker DeepAR\n",
-    "\n",
-    "\n",
-    "DeepAR is a supervised learning algorithm for forecasting scalar time series. This notebook demonstrates:\n",
-    "- How to format Deutsche Börse maintained stock market data to be used as training input and prediction on DeepAR\n",
-    "- Usage of `Dynamic Features` on DeepAR, with metrices within the Deutsche Börse dataset used as dynamic features\n",
-    "- How to easily train an DeepAR Estimator and create a Predictor using DeepAR container image\n",
-    "\n",
-    "Running the model training using the highest memory CPU based [ML instance type](https://aws.amazon.com/sagemaker/pricing/instance-types/) available on AWS at this time (`ml.c5.18xlarge`), it should take about 15 minutes to train the model if you use data sampled at daily interval.\n"
    ]
   },
   {
@@ -308,7 +308,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#estimator_job = 'dbg-deepar-D-2018-11-06-06-40-45-307'\n",
+    "#Use a job name from previous training, \n",
+    "#if you need to connect to a pre-deployed endpoint.\n",
+    "\n",
+    "#When running in one session, predictor is already initialized when 'deploy' method returns. \n",
+    "\n",
+    "#estimator_job = 'dbg-deepar-D-2018-11-20-03-48-43-169'\n",
+    "\n",
     "predictor = DeepARPredictor(estimator_job)"
    ]
   },
