--- a/notebooks/dbg-stock-clustering.ipynb
+++ b/notebooks/dbg-stock-clustering.ipynb
@@ -8,6 +8,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, we attempt to find similar stocks. A technique such as this would be useful for:\n",
+    "\n",
+    "- finding stocks that behave similarly (or dissimilarly) to one of interest\n",
+    "- building trading strategies\n",
+    "- identifying anomalies (e.g. if two stocks are normally correlated but fall out of line in a particular day, you might want to investigate)\n",
+    "- discarding bad stocks (if stocks do not correlate with other stocks they might need investigating).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install hdbscan"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -35,18 +56,6 @@
     "session = sagemaker.Session()\n",
     "s3_data_key = 'dbg-stockdata/source'\n",
     "s3_bucket = session.default_bucket()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this notebook, we attempt to find similar stocks. A technique such as this would be useful for:\n",
-    "\n",
-    "- finding stocks that behave similarly (or dissimilarly) to one of interest\n",
-    "- building trading strategies\n",
-    "- identifying anomalies (e.g. if two stocks are normally correlated but fall out of line in a particular day, you might want to investigate)\n",
-    "- discarding bad stocks (if stocks do not correlate with other stocks they might need investigating).\n"
    ]
   },
   {
@@ -220,16 +229,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_days = unique_days[0:60]\n",
-    "subset_df = stockdata[stockdata.index.isin(list(selected_days))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def prepare_single_stock(df, mnemonic, interval):\n",
     "    single_stock = df[df.Mnemonic == mnemonic].copy()\n",
     "    single_stock['Avg4Price'] = 0.25*(single_stock['MaxPrice'] + single_stock['MinPrice'] + \n",
@@ -241,6 +240,9 @@
     "    })\n",
     "    resampled['PctChange'] = resampled['MeanAvg4Price'].pct_change().fillna(0.0)\n",
     "    return resampled[['Mnemonic', 'PctChange', 'MeanAvg4Price']]\n",
+    "\n",
+    "selected_days = unique_days[0:60]\n",
+    "subset_df = stockdata[stockdata.index.isin(list(selected_days))]\n",
     "mnemonics = subset_df['Mnemonic'].unique()"
    ]
   },
