Clean Jupyter output cells

--- a/notebooks/dbg-custom-rnn.ipynb
+++ b/notebooks/dbg-custom-rnn.ipynb
@@ -312,7 +312,7 @@
     "\n",
     "#When running in one session, predictor is already initialized when 'deploy' method returns. \n",
     "\n",
-    "estimator_job = 'dbg-custom-rnn-D-BMW-2018-11-19-23-11-02-036' \n",
+    "#estimator_job = 'dbg-custom-rnn-D-BMW-2018-11-19-23-11-02-036' \n",
     "\n",
     "predictor = RealTimePredictor(estimator_job, content_type = \"text/csv\")\n",
     "model_archive = \"{}/{}/output/{}/output/model.tar.gz\".format(artifactname,interval,estimator_job)"
