Pandas plotting module is now directly under pandas, not pandas.tools
Pandas.tools has been removed and plotting is now directly under pandas

--- a/notebooks/dbg-data-preparation.ipynb
+++ b/notebooks/dbg-data-preparation.ipynb
@@ -29,8 +29,8 @@
     "import sagemaker\n",
     "import datetime\n",
     "import pandas as pd\n",
-    "from pandas.tools.plotting import autocorrelation_plot\n",
-    "from pandas.tools.plotting import scatter_matrix\n",
+    "from pandas.plotting import autocorrelation_plot\n",
+    "from pandas.plotting import scatter_matrix\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
